--- a/trunk/.settings/org.eclipse.core.resources.prefs
+++ b/trunk/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Sat Jul 07 16:09:39 CST 2012
+#Fri Jul 13 13:42:53 CST 2012
 eclipse.preferences.version=1
 encoding//WebRoot/Index_viewer.jsp=UTF-8
 encoding//WebRoot/login.jsp=UTF-8
+encoding//WebRoot/test.jsp=UTF-8
 encoding/<project>=UTF-8
