--- a/trunk/WebRoot/WEB-INF/web.xml
+++ b/trunk/WebRoot/WEB-INF/web.xml
@@ -17,5 +17,9 @@
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+	
+	<listener>
+  		<listener-class>data.util.TaskBackup</listener-class>
+ 	</listener>
     
 </web-app>
